kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ticket-service
  labels:
    name: ticket-service
