kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-service
  namespace: ticket-service
  labels:
    app: ticket-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket-service
  template:
    metadata:
      labels:
        app: ticket-service
    spec:
      containers:
      - name: ticket-service
        image: docker.io/posman/ticket-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "256Mi"
            cpu: "1000m"
        readinessProbe:
          httpGet:
            path: /status
            port: 9000
          initialDelaySeconds: 10
          periodSeconds: 20
