kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticket-service
  labels:
    app: ticket-service
  namespace: ticket-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 9000
  selector:
    app: ticket-service
