kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ticket-service
  namespace: ticket-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: ticket-service.lifornia.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ticket-service
                port:
                  number: 9000
